text issue solved

--- a/applicant-server/views/internship-list.ejs
+++ b/applicant-server/views/internship-list.ejs
@@ -134,7 +134,7 @@
           <div class="internships-card  rounded-lg shadow-sm border border-gray-200 overflow-hidden">
             <div class="internships-header flex justify-between items-center p-4">
               <div class="company-logo w-10 h-10 rounded flex items-center justify-center text-black font-bold">
-                <img src="recruiter-server/<%= internships.logo %>" alt="<%= internships.intCompany %> Logo" class="w-full h-full object-contain rounded" />
+                <img src="recruiter-server/<%= internships.logo %>" alt="<%= internships.intCompany %>" class="w-full h-full object-contain rounded" />
               </div>
             </div>
             <div class="internships-content px-4 pb-4">
