--- a/applicant-server/views/job-list.ejs
+++ b/applicant-server/views/job-list.ejs
@@ -170,7 +170,7 @@
           <div class="job-card  rounded-lg shadow-sm border border-gray-200 overflow-hidden">
             <div class="job-header flex justify-between items-center p-4">
               <div class="company-logo w-10 h-10 rounded flex items-center justify-center text-black font-bold">
-                <img src="/recruiter-server<%= job.logo %>" alt="<%= job.jobCompany %> Logo" class="w-full h-full object-contain rounded" />
+                <img src="/recruiter-server<%= job.logo %>" alt="<%= job.jobCompany %>" class="w-full h-full object-contain rounded" />
               </div>              
             </div>
             <div class="job-content px-4 pb-4">
