--- a/applicant-server/views/home.ejs
+++ b/applicant-server/views/home.ejs
@@ -6,6 +6,7 @@
             <a href="/"
                 class="text-black text-3xl font-bold transition-transform hover:scale-105 duration-300 ml-2">Go<span
                     class="text-yellow-400">Hire</span></a>
+                    
 
             <div class="relative w-1/3 group">
                 <form action="/search" method="POST" id="search-form"><input id="search-space" type="text"
@@ -36,32 +37,24 @@
                         class="hover:text-yellow-300 transition-colors duration-300 font-extrabold relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-yellow-300 after:transition-all after:duration-300 hover:after:w-full">Contact
                         Us</a></li>
 
-                <% if (locals.user) { %>
-                    <!-- Profile dropdown when user is logged in -->
-                    <li class="relative group">
-                        <button
-                            class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
-                            <%= user.firstName || 'Profile' %>
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none"
-                                    viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M19 9l-7 7-7-7" />
-                                </svg>
-                        </button>
-                        <div
-                            class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0">
-                            <a href="/profile" class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My
-                                Profile</a>
-                            <a href="/logout"
-                                class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-b-lg">Logout</a>
-                        </div>
-                    </li>
-                    <% } else { %>
-                        <!-- Login button when user is not logged in -->
-                        <li><a href="/login"
-                                class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">Login</a>
-                        </li>
+                        <% if (user) { %>
+                            <li class="relative group">
+                                <button class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+                                    <%= user.firstName || 'Profile' %>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                                    </svg>
+                                </button>
+                                <div class="absolute right-0 mt-2 w-48 bg-white rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50 transform -translate-y-2 group-hover:translate-y-0">
+                                    <a href="/profile" class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-t-lg">My Profile</a>
+                                    <a href="/logout" class="block px-4 py-2 text-blue-800 hover:bg-blue-50 rounded-b-lg">Logout</a>
+                                </div>
+                            </li>
+                        <% } else { %>
+                            <li><a href="/login" class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg">Login</a></li>
                         <% } %>
+                        
+                        
             </ul>
 
 
