--- a/applicant-server/views/profile.ejs
+++ b/applicant-server/views/profile.ejs
@@ -87,14 +87,14 @@
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">First Name</label>
               <p class="text-lg text-blue-900 font-semibold">
-                <%= userData.firstName %>
+                <%= user.firstName %>
               </p>
             </div>
 
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">Last Name</label>
               <p class="text-lg text-blue-900 font-semibold">
-                <%= userData.lastName %>
+                <%= user.lastName %>
               </p>
             </div>
 
@@ -106,7 +106,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                 </svg>
-                <%= userData.email %>
+                <%= user.email %>
               </p>
             </div>
 
@@ -118,21 +118,21 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                 </svg>
-                <%= userData.phone %>
+                <%= user.phone %>
               </p>
             </div>
 
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">Gender</label>
               <p class="text-lg text-blue-900 font-semibold">
-                <%= userData.gender %>
+                <%= user.gender %>
               </p>
             </div>
 
             <div class="bg-blue-50 p-4 rounded-lg">
               <label class="block text-sm font-medium text-blue-700">Member Since</label>
               <p class="text-lg text-blue-900 font-semibold">
-                <%= userData.memberSince %>
+                 25 March 2025
               </p>
             </div>
           </div>
