--- a/applicant-server/views/home.ejs
+++ b/applicant-server/views/home.ejs
@@ -81,7 +81,7 @@
                     <% if (user) { %>
                         <li class="relative group">
                             <button
-                                class="bg-yellow-400 hover:bg-yellow-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
+                                class="bg-yellow-400 hover:bg-blue-500 text-blue-800 font-black py-2 px-6 rounded-full transition-all duration-300 hover:shadow-lg flex items-center">
                                 <%= user.firstName || 'Profile' %>
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none"
                                         viewBox="0 0 24 24" stroke="currentColor">
