--- a/admin-server/views/applicantlist.ejs
+++ b/admin-server/views/applicantlist.ejs
@@ -39,6 +39,7 @@
                 </div>
                 <% } %>
         </div>
+        <div class="mt-48"></div>
     </div>
 
     <%- include('layout/footer') %>
