--- a/recruiter-server/views/jobs.ejs
+++ b/recruiter-server/views/jobs.ejs
@@ -20,7 +20,7 @@
                 <tr class="text-gray-700 bg-gray-200">
                     <th class="px-6 py-3 border border-gray-300">Company</th>
                     <th class="px-6 py-3 border border-gray-300">Job Title</th>
-                    <th class="px-6 py-3 border border-gray-300">Salary</th>
+                    <th class="px-4 py-3 border border-gray-300">Salary (In LPA)</th>
                     <th class="px-6 py-3 border border-gray-300">Location</th>
                     <th class="px-6 py-3 border border-gray-300">Positions</th>
                     <th class="px-6 py-3 border border-gray-300">Action</th>
