--- a/recruiter-server/views/layout/header.ejs
+++ b/recruiter-server/views/layout/header.ejs
@@ -80,7 +80,7 @@
           <li><a href="/recruiter/internships" class="hover:text-blue-900 font-medium transition-colors duration-300">Internships</a></li>
           <li class="flex items-center space-x-2">
             <a href="/recruiter/profile" class="hover:text-blue-900 font-medium transition-colors duration-300">
-              <img src="/auth/profile-image/<%= user.profileImage %>"  
+              <img src="/images/default.png"  
                    alt="Profile" class="w-8 h-8 rounded-full bg-gray-200 profile-image" />
             </a>
             <div class="md:hidden">
