--- a/recruiter-server/views/jobs.ejs
+++ b/recruiter-server/views/jobs.ejs
@@ -23,7 +23,7 @@
                     <th class="px-4 py-3 border border-gray-300">Salary (In LPA)</th>
                     <th class="px-6 py-3 border border-gray-300">Location</th>
                     <th class="px-6 py-3 border border-gray-300">Positions</th>
-                    <th class="px-6 py-3 border border-gray-300">Action</th>
+                    <th class="px-6 py-3 border border-gray-300 text-center">Action</th>
                     <th class="px-6 py-3 border border-gray-300">Applications</th>
                 </tr>
             </thead>
@@ -47,10 +47,15 @@
                             <td class="px-6 py-4 border border-gray-300"><%= job.noofPositions %></td>
                 
                             <!-- Delete Job -->
-                            <td class="px-6 py-4 border border-gray-300">
+                            <td class="px-6 py-4 border border-gray-300 flex items-center justify-center gap-4 mt-3">
                                 <form action="/recruiter/delete-job/<%= job._id %>" method="POST">
-                                    <button type="submit" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded">
+                                    <button type="submit" class="bg-red-500 hover:bg-red-800 text-white font-bold py-2 px-4 rounded">
                                         Delete
+                                    </button>
+                                </form>
+                                <form action="/recruiter/delete-job/<%= job._id %>" method="POST">
+                                    <button type="submit" class="bg-green-500 hover:bg-green-800 text-white font-bold py-2 px-4 rounded">
+                                        Edit
                                     </button>
                                 </form>
                             </td>
